add build option to add extra JVM args